// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatButton Snap should renders correctly 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  title="Click to load [l]"
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;

exports[`FlatButton Snap should renders correctly without title 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  title=" [l]"
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;
